Fixed some bugs in dynamic implementation
Former-commit-id: 45b6ea313af7aa0caf6e737fcca9f7ad67a11047 [formerly 8ca891b0483cc623100e603c71a2848324bfd3f1 [formerly bcd760bf487489c0c5a4e2eb005f858c8ae99d44]]
Former-commit-id: 4e5fb1c911477f0aa249e9ee9d105cdfd99c7bb3
Former-commit-id: 9dab000a461b8b887a8a8071290a7c11c76f4dad

--- a/testHTML/m21jSandbox.html
+++ b/testHTML/m21jSandbox.html
@@ -19,7 +19,7 @@
  <!-- VexFlow Compiled Source -->
  <script src='../ext/vexflow/vexflow-min.js'></script>
  <!-- music21j -->
- <script src="../music21j.js" type="text/javascript"></script>
+ <script src="../music21jExp.js" type="text/javascript"></script>
  
  <!-- music21theory -->
  <script src="../music21theory.js" type="text/javascript"></script>
