--- a/testHTML/requireTest.html
+++ b/testHTML/requireTest.html
@@ -1,23 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns = "http://www.w3.org/1999/xhtml">
-<head>
- <title>Require Test for Music21j</title>
- <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <script data-main="../src/requireMain.js" src="../ext/require/require.js"></script>
- <link rel="stylesheet" href="../css/m21.css" type="text/css" />
-</head>
-<body>
-<div class="related">
-    <ul><li><a href="#">21m.051 Cuthbert</a> &raquo; <a href="#">Require Test</a></li></ul>
-</div>
-<div class="document">
-  <div class="documentwrapper">
-    <div class="bodywrapper">
-      <div class="body" id="testBank">
-      </div>
-    </div>
-  </div>
-</div>
-
-</body>
+<html>
+	<head>
+	 <title>Require Test for Music21j</title>
+	 <script data-main="../src/requireMain.js" src="../ext/require/require.js"></script>
+	</head>
+	<body>
+	</body>
 </html>
