--- a/testHTML/m21jSandbox.html
+++ b/testHTML/m21jSandbox.html
@@ -4,28 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>Music21j Sandbox</title>
   <link href='http://fonts.googleapis.com/css?family=OFL+Sorts+Mill+Goudy+TT|Yanone+Kaffeesatz|Tangerine' rel='stylesheet' type='text/css'>
-
- <!-- midi.js package -->
- <script src="../ext/midijs/js/MIDI/AudioDetect.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Plugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Player.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.script.js" type="text/javascript"></script>
- <!-- extras -->
- <script src="../ext/midijs/inc/Base64.js" type="text/javascript"></script>
- <script src="../ext/midijs/inc/base64binary.js" type="text/javascript"></script>
-
- <!-- VexFlow Compiled Source -->
- <script src='../ext/vexflow/vexflow-min.js'></script>
- <!-- music21j -->
- <script src="../music21jExp.js" type="text/javascript"></script>
- 
- <!-- music21theory -->
- <script src="../music21theory.js" type="text/javascript"></script>
-
-  <!-- Support Sources -->
- <script src='../ext/jquery/jquery-1.10.2.min.js'></script>
+  <script data-main="../src/music21.js" src="../ext/require/require.js"></script>
 
   <style type="text/css">
     canvas {
@@ -45,37 +24,30 @@
   bach = undefined;
 
   window.onload = function () {
-	  MIDI.loadPlugin({
-			soundfontUrl: "../ext/midijs/soundfont/",
-			instrument: "acoustic_grand_piano",
-			callback: function() {
-				M21Theory.playMotto();
-			}
-		});
+	  require(['music21'], function() { 
     canvas = $("div.sandbox div.sandbox canvas")[0];
-
 
 	var allJSON = '{"parts": [[[{"octave": 5, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "B", "quarterLength": 0.5}], [{"octave": 4, "pitchName": "A", "quarterLength": 1.0}, {"octave": 4, "pitchName": "B", "quarterLength": 1.0}, {"octave": 5, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 5, "pitchName": "E", "quarterLength": 1.0}], [{"octave": 5, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "B", "quarterLength": 1.0}, {"octave": 4, "pitchName": "A", "quarterLength": 1.0}, {"octave": 5, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "A", "quarterLength": 0.5}, {"octave": 4, "pitchName": "B", "quarterLength": 0.5}, {"octave": 4, "pitchName": "G#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "A", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "B", "quarterLength": 1.0}, {"octave": 4, "pitchName": "B", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "A", "quarterLength": 1.0}, {"octave": 4, "pitchName": "B", "quarterLength": 1.0}, {"octave": 5, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 5, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "A", "quarterLength": 1.0}, {"octave": 4, "pitchName": "B", "quarterLength": 1.0}, {"octave": 5, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "A", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "G#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "G#", "quarterLength": 2.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 2.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}]], [[{"octave": 4, "pitchName": "E", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "E", "quarterLength": 0.5}, {"octave": 4, "pitchName": "A", "quarterLength": 0.5}, {"octave": 4, "pitchName": "G#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}, {"octave": 4, "pitchName": "G#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "G#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}, {"octave": 4, "pitchName": "D#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}, {"octave": 4, "pitchName": "A", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "G#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 2.0}], [{"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "D", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E", "quarterLength": 2.0}, {"octave": 4, "pitchName": "D", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 0.5}], [{"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "D", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}]], [[{"octave": 3, "pitchName": "A", "quarterLength": 0.5}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}], [{"octave": 4, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "A", "quarterLength": 1.0}, {"octave": 3, "pitchName": "B", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "A", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E", "quarterLength": 0.5}, {"octave": 4, "pitchName": "D", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "D", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "A", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "A", "quarterLength": 0.5}, {"octave": 3, "pitchName": "G#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "D", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "A", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "D", "quarterLength": 1.0}, {"octave": 4, "pitchName": "D", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "D", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "E#", "quarterLength": 2.0}], [{"octave": 3, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 2.0}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "A#", "quarterLength": 0.5}], [{"octave": 3, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "A#", "quarterLength": 1.0}]], [[{"octave": 3, "pitchName": "A", "quarterLength": 0.5}, {"octave": 3, "pitchName": "G#", "quarterLength": 0.5}], [{"octave": 3, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "G#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "A", "quarterLength": 1.0}, {"octave": 3, "pitchName": "G#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "A", "quarterLength": 0.5}, {"octave": 3, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "E", "quarterLength": 1.0}, {"octave": 2, "pitchName": "A", "quarterLength": 1.0}, {"octave": 3, "pitchName": "E#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 2, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 2, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "F#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "G#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "G#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "A", "quarterLength": 0.5}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 2, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "G#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "A", "quarterLength": 1.0}, {"octave": 3, "pitchName": "A", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "D", "quarterLength": 1.0}, {"octave": 3, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "E#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "F#", "quarterLength": 1.0}], [{"octave": 2, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "D", "quarterLength": 1.0}, {"octave": 3, "pitchName": "C#", "quarterLength": 2.0}], [{"octave": 2, "pitchName": "A#", "quarterLength": 2.0}, {"octave": 2, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "D", "quarterLength": 1.0}, {"octave": 2, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "F#", "quarterLength": 1.0}]]]}';
 	var jsonObj = JSON.parse(allJSON);
-	s = new Music21.Score();
+	s = new music21.stream.Score();
 	s.tempo = 60;
 	s.timeSignature = '4/4';
-	s.keySignature = new Music21.KeySignature(3);
+	s.keySignature = new music21.key.KeySignature(3);
 	for (var i = 0; i < jsonObj['parts'].length; i++) {
-		var part = new Music21.Part();
+		var part = new music21.stream.Part();
 		if (i < 2) {
-			part.clef = new Music21.Clef('treble');
+			part.clef = new music21.clef.Clef('treble');
 		} else {
-			part.clef = new Music21.Clef('bass');
+			part.clef = new music21.clef.Clef('bass');
 		}
 		//console.log('got part');
 		var jsonPart = jsonObj['parts'][i];
 		for (var m = 0; m < jsonPart.length; m++) {
 			//console.log('got measure');
-			var measure = new Music21.Measure();
+			var measure = new music21.stream.Measure();
 			var jsonMeasure = jsonPart[m];
 			for (var nI = 0; nI < jsonMeasure.length; nI++) {
-				var n = new Music21.Note();
+				var n = new music21.note.Note();
 				var noteDict = jsonMeasure[nI];
 				//console.log(noteDict);
 				n.pitch.name = noteDict['pitchName'];
@@ -89,7 +61,7 @@
 	}
 	bach = s;
     live_code();
-
+	  });
   };
   /* Take raw javascript code, and return moderately useful HTML */
     function prettify_code(code) {
@@ -111,17 +83,19 @@
        Find all the javascript examples and copy their source code
        into the associated <code> blocks.
     */
-    $(function() {
-      $("div.description").each(function(index, sel) {
-        codes = $(sel).find("code.example");
-        codes.each(function(i, s) {
-          var example = $(s).attr("example");
-          var code = $($(sel).find(
-            "div.example." + example + " script")[0]).html();
-          $(s).html(prettify_code(code));
-         })
-      })
-    })
+    require(['music21'], function() {
+	    $(function() {
+	      $("div.description").each(function(index, sel) {
+	        codes = $(sel).find("code.example");
+	        codes.each(function(i, s) {
+	          var example = $(s).attr("example");
+	          var code = $($(sel).find(
+	            "div.example." + example + " script")[0]).html();
+	          $(s).html(prettify_code(code));
+	         })
+	      })
+	    })
+    });
   </script>
 </head>
 
@@ -145,9 +119,9 @@
       <div class="example sandbox" example="sandbox">
         <textarea id="sandbox" class="editor"
                   style="width: 1000px; height: 180px; ">
-var n = new Music21.Note("C#");
+var n = new music21.note.Note("C#");
 n.duration.type="whole";
-var s = new Music21.Stream();
+var s = new music21.stream.Stream();
 s.append(n);
 s.replaceLastCanvas();
 </textarea>
@@ -176,24 +150,26 @@ s.replaceLastCanvas();
         <script>
 
         var timeout;
-        var msg = $('div.editor-error .text');
-
-        function live_code() {
-          var code = $("#sandbox").val();
-
-          try {
-            eval(code);
-            msg.html('').hide();
-          } catch (e) {
-            msg.html(e.toString()).show();
-          }
-
-        }
-
-        $('#sandbox').on('blur keyup paste', function() {
-          if (timeout) clearTimeout(timeout);
-          timeout = setTimeout(live_code, 200);
+        var msg = "";
+        require(['music21'], function() {
+            msg = $('div.editor-error .text');
+	        
+	        $('#sandbox').on('blur keyup paste', function() {
+	          if (timeout) clearTimeout(timeout);
+	          timeout = setTimeout(live_code, 200);
+	        });
         });
+        function live_code() {
+            var code = $("#sandbox").val();
+
+            try {
+              eval(code);
+              msg.html('').hide();
+            } catch (e) {
+              msg.html(e.toString()).show();
+            }
+
+          }
 
 
         </script>
