--- a/testHTML/demo-DragScore.html
+++ b/testHTML/demo-DragScore.html
@@ -3,21 +3,7 @@
 <head>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
  <!-- midi.js package -->
- <script src="/m21j/ext/midijs/js/MIDI/AudioDetect.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/MIDI/Plugin.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/MIDI/Player.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/Window/DOMLoader.script.js" type="text/javascript"></script>
- <!-- extras -->
- <script src="/m21j/ext/midijs/inc/Base64.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/inc/base64binary.js" type="text/javascript"></script>
- <!-- vexflow -->
- <script src='http://code.jquery.com/jquery-latest.js'></script>
- <script src='http://www.vexflow.com/support/vexflow-min.js'></script>
- <!-- music21j -->
- <script src="/m21j/music21j.js" type="text/javascript"></script>
- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+  <script data-main="../src/music21.js" src="../ext/require/require.js"></script>
 
  <link rel="stylesheet" href="http://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
@@ -26,46 +12,15 @@
 <body>
 <script type="text/javascript">
 
-var stopIntervalId;
-var numPlays = 0;
-var playedNote = 70;
-
-
-function refreshMe() {
-    stopIntervalId = setInterval(playSeventy, 100);
-}
-
-function drawME() {
-	var myNote = new Music21.Rest(4.0);
-    var myStream = new Music21.Stream();
-    myStream.append(myNote);
-	myStream.appendNewCanvas();
-}
-
 var allStream;
 
-window.onload = function () {
-	MIDI.loadPlugin({
-		soundfontUrl: "/m21j/ext/midijs/soundfont/",
-		instrument: "acoustic_grand_piano",
-		callback: function() {
-			var delay = 0; // play one note every quarter second
-			var note = 50; // the MIDI note
-			var velocity = 127; // how hard the note hits
-			// play the note
-			MIDI.setVolume(0, 127);
-			MIDI.noteOn(0, note, velocity, delay);
-			MIDI.noteOff(0, note, delay + 0.75);
-			//var thisInt = new Music21.GenericInterval(-10);
-			//alert (thisInt.reverse().directed);
-		}
-	});
+require(['music21'], function () {
 	renderThemes();
-	allStream = new Music21.Part();
+	allStream = new music21.stream.Part();
 	var newCanvas = allStream.createPlayableCanvas();
 	$('#dropDiv canvas').replaceWith(newCanvas[0]);	
 
-};
+});
 
 function renderThemes ()  {
     var themes = ["c4 e g g", "c'4 g2 e4", "c2 r", "c'4 c c' r",
@@ -75,7 +30,7 @@ function renderThemes ()  {
     var themeCanvases = [];
     for (var i = 0; i < themes.length; i++) {
         var thisTheme = themes[i];
-        var myStream = new Music21.TinyNotation(thisTheme);
+        var myStream = music21.tinyNotation.TinyNotation(thisTheme);
         myStream.timeSignature = '4/4';
         var nc = myStream.createPlayableCanvas();
         $('#themeDiv').append(nc);
