--- a/testHTML/roundCanon.html
+++ b/testHTML/roundCanon.html
@@ -3,31 +3,8 @@
 <head>
  <title>21M.051: Make me a Canon!</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <script src='../ext/jquery/jquery-1.10.2.min.js'></script>
- <!-- midi.js package -->
- <script src="../ext/midijs/js/MIDI/AudioDetect.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Plugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Player.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.script.js" type="text/javascript"></script>
- <!-- extras -->
- <script src="../ext/midijs/inc/Base64.js" type="text/javascript"></script>
- <script src="../ext/midijs/inc/base64binary.js" type="text/javascript"></script>
- <!-- vexflow -->
- <script src="../ext/vexflow/vexflow-min.js"></script>
-
- <!-- jQuery UI for drag and drop... -->
- <script src="../ext/jqueryPlugins/jqueryUI/jquery-ui.min.js" type="text/javascript" ></script>
-
- <!-- music21j -->
- <script src="../music21j.js" type="text/javascript"></script>
- 
- <!-- music21theory -->
- <script src="../music21theory.js" type="text/javascript"></script>
+ <script data-main="../src/m21theory.js" src="../ext/require/require.js"></script>
  <link rel="stylesheet" href="../css/m21.css" type="text/css" />
-
-
 
 <style>
 .lightInput { border: 1px gray dotted;
@@ -39,7 +16,6 @@
 }
 .correct    { background-color: #bbffbb; }
 .incorrect  { background-color: #ffbbbb; }
-
 </style>
 
 </head>
@@ -47,26 +23,9 @@
 <script type="text/javascript">
 var m2;
 
-window.onload = function () {
-	MIDI.loadPlugin({
-		soundfontUrl: "../ext/midijs/soundfont/",
-		instrument: "acoustic_grand_piano",
-		callback: function() {
-			M21Theory.playMotto();
-		}
-	});
-	//M21Theory.randomGeneratorType = 'fixed';
-	//M21Theory.randomSeed = 1000;
-	//M21Theory.debug = true;
-	//Music21.debug = true;
-	roundStart();
-	
-	
-};
-
-function roundStart() {
-	makeRound();
-}
+require(['m21theory'], function() { 
+    makeRound();    
+});
 
 fillScoreOut = function (editor, scoreOut) {
 	var sectionLength = scoreOut.repetitionLength;
@@ -85,7 +44,7 @@ fillScoreOut = function (editor, scoreOut) {
 			
 			if (j < startMusic || j >= endMusic) {
 				// add a rest:
-				var r = new Music21.Rest();
+				var r = new music21.note.Rest();
 				r.duration.type = 'whole';
 				m.append(r);
 				//console.log("Added rest to m: " + j);
@@ -93,7 +52,7 @@ fillScoreOut = function (editor, scoreOut) {
 				var copyMeasure = editor.elements[(j - startMusic) % editor.length];
 				for (var l = 0; l < copyMeasure.length; l++) {
 					var copyNote = copyMeasure.elements[l];
-					var n = new Music21.Note();
+					var n = new music21.note.Note();
 					n.pitch.name = copyNote.pitch.name;
 					n.pitch.octave = copyNote.pitch.octave;
 					n.duration.quarterLength = copyNote.duration.quarterLength;
@@ -112,15 +71,15 @@ makeRound = function () {
 
 	var numParts = 3;
 	var fullRepetitions = 2;
-	var pEditor = new Music21.Part();
+	var pEditor = new music21.stream.Part();
 
 	pEditor.timeSignature = '4/4';
-	pEditor.clef = new Music21.Clef('treble')
+	pEditor.clef = new music21.clef.Clef('treble')
 	
 	var notes = ['C4', 'F4', 'G4', 'C5'];
-	var scoreOut = new Music21.Score();
+	var scoreOut = new music21.stream.Score();
 	scoreOut.timeSignature = '4/4';
-	scoreOut.clef = new Music21.Clef('treble');
+	scoreOut.clef = new music21.clef.Clef('treble');
 	scoreOut.numParts = numParts;
 	scoreOut.fullRepetitions = fullRepetitions;
 	scoreOut.repetitionLength = notes.length;
@@ -128,9 +87,9 @@ makeRound = function () {
 	scoreOut.totalMeasures = totalMeasures;
 	console.log("Total Measures: " + totalMeasures);
 	for (var i = 0; i < numParts; i ++) {
-		var pOut = new Music21.Part();
+		var pOut = new music21.stream.Part();
 		for (var j = 0; j < totalMeasures; j++) {
-			var m = new Music21.Measure();
+			var m = new music21.stream.Measure();
 			m.autoBeam = true;
 			if (i == 0 && j != 0) {
 				m.renderOptions.showMeasureNumber = true;
@@ -142,17 +101,17 @@ makeRound = function () {
 
 	
 	for (var i = 0; i < notes.length * numParts; i++) {
-		var m = new Music21.Measure();
+		var m = new music21.stream.Measure();
 		for (var j =0; j < 4; j++) {
-			//var n = new Music21.Rest();
-			var n = new Music21.Note(notes[i % notes.length]);
+			//var n = new music21.note.Rest();
+			var n = new music21.note.Note(notes[i % notes.length]);
 			m.append(n);
 			m.autoBeam = false;
 		}
 		pEditor.append(m);
 	}
 	pEditor.autoBeam = false;
-	var s2 = new Music21.Score();
+	var s2 = new music21.stream.Score();
 	s2.renderOptions.events['click'] = s2.canvasChangerFunction;
 	s2.renderOptions.maxSystemWidth = 800;
 	s2.changedCallbackFunction = function () { fillScoreOut(s2.elements[0], scoreOut) };
@@ -172,7 +131,7 @@ makeRound = function () {
 
 </script>
 <div class="related">
-	<ul><li><a href="#">21m.051 Cuthbert</a> &raquo; <a href="#">Local Test</a></li></ul>
+	<ul><li><a href="#">21m.051 Cuthbert</a> &raquo; <a href="#">Round Canon</a></li></ul>
 </div>
 <div class="document">
   <div class="documentwrapper">
