--- a/testHTML/testRenderJSON.html
+++ b/testHTML/testRenderJSON.html
@@ -1,83 +1,39 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns = "http://www.w3.org/1999/xhtml">
 <head>
- <title>TwoPart Test</title>
+ <title>JSON Render and Window Binding</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <script src='http://code.jquery.com/jquery-latest.js'></script>
- <!-- midi.js package -->
- <script src="../ext/midijs/js/MIDI/AudioDetect.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Plugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Player.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.script.js" type="text/javascript"></script>
- <!-- extras -->
- <script src="../ext/midijs/inc/Base64.js" type="text/javascript"></script>
- <script src="../ext/midijs/inc/base64binary.js" type="text/javascript"></script>
- <!-- vexflow -->
- <script src="http://www.vexflow.com/support/vexflow-min.js"></script>
-
- <!-- jQuery UI for drag and drop... -->
- <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js" type="text/javascript" ></script>
-
- <!-- music21j -->
- <script src="../music21j.js" type="text/javascript"></script>
- 
- <!-- music21theory -->
- <script src="../music21theory.js" type="text/javascript"></script>
+    <script data-main="../src/music21" src="../ext/require/require.js"></script>
  <link rel="stylesheet" href="http://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
-
-<style>
-.lightInput { border: 1px gray dotted;
-			  background-color: #ffffcc;
-			  opacity: .7;
-			   }
-.unanswered { background-color: #ffffbb; 
-			  opacity: .7;
-}
-.correct    { background-color: #bbffbb; }
-.incorrect  { background-color: #ffbbbb; }
-
-</style>
 
 </head>
 <body>
 <script type="text/javascript">
 var s; // for console access...
-window.onload = function () {
-	MIDI.loadPlugin({
-		soundfontUrl: "../ext/midijs/soundfont/",
-		instrument: "acoustic_grand_piano",
-		callback: function() {
-			M21Theory.playMotto();
-		}
-	});
-	//M21Theory.randomGeneratorType = 'fixed';
-	//M21Theory.randomSeed = 1000;
-	//M21Theory.debug = true;
-	//Music21.debug = true;
+
+require(['music21'], function() { 
 	var allJSON = '{"parts": [[[{"octave": 5, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "B", "quarterLength": 0.5}], [{"octave": 4, "pitchName": "A", "quarterLength": 1.0}, {"octave": 4, "pitchName": "B", "quarterLength": 1.0}, {"octave": 5, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 5, "pitchName": "E", "quarterLength": 1.0}], [{"octave": 5, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "B", "quarterLength": 1.0}, {"octave": 4, "pitchName": "A", "quarterLength": 1.0}, {"octave": 5, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "A", "quarterLength": 0.5}, {"octave": 4, "pitchName": "B", "quarterLength": 0.5}, {"octave": 4, "pitchName": "G#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "A", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "B", "quarterLength": 1.0}, {"octave": 4, "pitchName": "B", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "A", "quarterLength": 1.0}, {"octave": 4, "pitchName": "B", "quarterLength": 1.0}, {"octave": 5, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 5, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "A", "quarterLength": 1.0}, {"octave": 4, "pitchName": "B", "quarterLength": 1.0}, {"octave": 5, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "A", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "G#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "G#", "quarterLength": 2.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 2.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}]], [[{"octave": 4, "pitchName": "E", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "E", "quarterLength": 0.5}, {"octave": 4, "pitchName": "A", "quarterLength": 0.5}, {"octave": 4, "pitchName": "G#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}, {"octave": 4, "pitchName": "G#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "G#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}, {"octave": 4, "pitchName": "D#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}, {"octave": 4, "pitchName": "A", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "G#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "F#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 2.0}], [{"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "D", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E", "quarterLength": 2.0}, {"octave": 4, "pitchName": "D", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 0.5}], [{"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "D", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}]], [[{"octave": 3, "pitchName": "A", "quarterLength": 0.5}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}], [{"octave": 4, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "A", "quarterLength": 1.0}, {"octave": 3, "pitchName": "B", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "A", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E", "quarterLength": 0.5}, {"octave": 4, "pitchName": "E", "quarterLength": 0.5}, {"octave": 4, "pitchName": "D", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "D", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "A", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "A", "quarterLength": 0.5}, {"octave": 3, "pitchName": "G#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "D", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "A", "quarterLength": 1.0}, {"octave": 4, "pitchName": "E", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "D", "quarterLength": 1.0}, {"octave": 4, "pitchName": "D", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "D", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 4, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "E#", "quarterLength": 2.0}], [{"octave": 3, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 4, "pitchName": "C#", "quarterLength": 2.0}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "A#", "quarterLength": 0.5}], [{"octave": 3, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "A#", "quarterLength": 1.0}]], [[{"octave": 3, "pitchName": "A", "quarterLength": 0.5}, {"octave": 3, "pitchName": "G#", "quarterLength": 0.5}], [{"octave": 3, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "G#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "A", "quarterLength": 1.0}, {"octave": 3, "pitchName": "G#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "A", "quarterLength": 0.5}, {"octave": 3, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "E", "quarterLength": 1.0}, {"octave": 2, "pitchName": "A", "quarterLength": 1.0}, {"octave": 3, "pitchName": "E#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 2, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "C#", "quarterLength": 1.0}, {"octave": 2, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "F#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "G#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "F#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "G#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "A", "quarterLength": 0.5}, {"octave": 3, "pitchName": "B", "quarterLength": 0.5}, {"octave": 2, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "F#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "G#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "A", "quarterLength": 1.0}, {"octave": 3, "pitchName": "A", "quarterLength": 1.0}], [{"octave": 4, "pitchName": "D", "quarterLength": 1.0}, {"octave": 3, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "E#", "quarterLength": 1.0}, {"octave": 3, "pitchName": "F#", "quarterLength": 1.0}], [{"octave": 2, "pitchName": "B", "quarterLength": 0.5}, {"octave": 3, "pitchName": "C#", "quarterLength": 0.5}, {"octave": 3, "pitchName": "D", "quarterLength": 1.0}, {"octave": 3, "pitchName": "C#", "quarterLength": 2.0}], [{"octave": 2, "pitchName": "A#", "quarterLength": 2.0}, {"octave": 2, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "C#", "quarterLength": 1.0}], [{"octave": 3, "pitchName": "D", "quarterLength": 1.0}, {"octave": 2, "pitchName": "B", "quarterLength": 1.0}, {"octave": 3, "pitchName": "F#", "quarterLength": 1.0}]]]}';
 	var jsonObj = JSON.parse(allJSON);
-	s = new Music21.Score();
+	s = new music21.stream.Score();
 	s.tempo = 60;
 	s.timeSignature = '4/4';
-	s.keySignature = new Music21.KeySignature(3);
+	s.keySignature = new music21.key.KeySignature(3);
 	for (var i = 0; i < jsonObj['parts'].length; i++) {
-		var part = new Music21.Part();
+		var part = new music21.stream.Part();
 		if (i < 2) {
-			part.clef = new Music21.Clef('treble');
+			part.clef = new music21.clef.Clef('treble');
 		} else {
-			part.clef = new Music21.Clef('bass');
+			part.clef = new music21.clef.Clef('bass');
 		}
 		//console.log('got part');
 		var jsonPart = jsonObj['parts'][i];
 		for (var m = 0; m < jsonPart.length; m++) {
 			//console.log('got measure');
-			var measure = new Music21.Measure();
+			var measure = new music21.stream.Measure();
 			var jsonMeasure = jsonPart[m];
 			for (var nI = 0; nI < jsonMeasure.length; nI++) {
-				var n = new Music21.Note();
+				var n = new music21.note.Note();
 				var noteDict = jsonMeasure[nI];
 				//console.log(noteDict);
 				n.pitch.name = noteDict['pitchName'];
@@ -89,29 +45,30 @@ window.onload = function () {
 		}
 		s.append(part);
 	}
-	$(window).trigger('resizeEnd');	
-};
+	$(window).bind('resizeEnd', function() {
+	    //do something, window hasn't changed size in 500ms
+	    var newWidth = $('#testBank').width();
+	    var canvasWidth = newWidth;
+	    //console.log(canvasWidth);
+	    s.resetRenderOptionsRecursive();
+	    s.maxSystemWidth = canvasWidth;
+	    $('#testBank').empty();
+	    s.appendNewCanvas('#testBank');
+	});
+	$(window).resize( function() {
+	    if(this.resizeTO) clearTimeout(this.resizeTO);
+	    this.resizeTO = setTimeout(function() {
+	        $(this).trigger('resizeEnd');
+	    }, 200);
+	})
+    $(window).trigger('resizeEnd'); 
 
-$(window).bind('resizeEnd', function() {
-    //do something, window hasn't changed size in 500ms
-	var newWidth = $('#testBank').width();
-	var canvasWidth = newWidth;
-	//console.log(canvasWidth);
-	s.resetRenderOptionsRecursive();
-	s.maxSystemWidth = canvasWidth;
-	$('#testBank').empty();
-	s.appendNewCanvas('#testBank');
 });
-$(window).resize( function() {
-    if(this.resizeTO) clearTimeout(this.resizeTO);
-    this.resizeTO = setTimeout(function() {
-        $(this).trigger('resizeEnd');
-    }, 200);
-})
+
 
 </script>
 <div class="related">
-	<ul><li><a href="#">21m.051 Cuthbert</a> &raquo; <a href="#">Two Part Test</a></li></ul>
+	<ul><li><a href="#">21m.051 Cuthbert</a> &raquo; <a href="#">JSON Render Test</a></li></ul>
 </div>
 <div class="document">
   <div class="documentwrapper">
