quint tests all pass

--- a/tests/index.html
+++ b/tests/index.html
@@ -4,35 +4,10 @@
   <meta charset="utf-8">
   <title>Music21 QUnit Tests</title>
   <link rel="stylesheet" href="../ext/qUnit/qunit-1.12.0.css">
- <script src='../ext/jquery/jquery-1.10.2.min.js'></script>
- <!-- midi.js package -->
- <script src="../ext/midijs/js/MIDI/AudioDetect.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Plugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Player.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.script.js" type="text/javascript"></script>
- <!-- extras -->
- <script src="../ext/midijs/inc/Base64.js" type="text/javascript"></script>
- <script src="../ext/midijs/inc/base64binary.js" type="text/javascript"></script>
- <!-- vexflow -->
- <script src="../ext/vexflow/vexflow-min.js"></script>
-
- <!-- jQuery UI for drag and drop... -->
- <script src="../ext/jqueryPlugins/jqueryUI/jquery-ui.min.js" type="text/javascript" ></script>
-
- <!-- music21j -->
- <script src="../music21jExp.js" type="text/javascript"></script>
- 
- <!-- music21theory -->
- <script src="../music21theoryExp.js" type="text/javascript"></script>
-
-
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../ext/qUnit/qunit-1.12.0.js"></script>
-  <script src="tests.js"></script>
+  <script data-main="tests" src="../ext/require/require.js"></script>
 </body>
 </html>
