--- a/ps051/ps09.html
+++ b/ps051/ps09.html
@@ -3,63 +3,14 @@
 <head>
  <title>21M.051 Problem Set 9</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <script src='http://code.jquery.com/jquery-latest.js'></script>
- <!-- midi.js package -->
- <script src="/m21j/ext/midijs/js/MIDI/AudioDetect.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/MIDI/Plugin.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/MIDI/Player.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/Window/DOMLoader.script.js" type="text/javascript"></script>
- <!-- extras -->
- <script src="/m21j/ext/midijs/inc/Base64.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/inc/base64binary.js" type="text/javascript"></script>
- <!-- vexflow -->
- <script src='http://www.vexflow.com/support/vexflow-min.js'></script>
-
- <!-- jQuery UI for drag and drop... -->
- <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js" type="text/javascript" ></script>
-
- <!-- music21j -->
- <script src="/m21j/music21j.js" type="text/javascript"></script>
- 
- <!-- music21theory -->
- <script src="/m21j/music21theory.js" type="text/javascript"></script>
- <link rel="stylesheet" href="http://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
-
-<style>
-.lightInput { border: 1px gray dotted;
-			  background-color: #ffffcc;
-			  opacity: .7;
-			   }
-.unanswered { background-color: #ffffbb; 
-			  opacity: .7;
-}
-.correct    { background-color: #bbffbb; }
-.incorrect  { background-color: #ffbbbb; }
-
-</style>
-
+ <script data-main="../src/m21theory" src="../ext/require/require.js"></script>
+  <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
 </head>
 <body>
 <script type="text/javascript">
-var msct;
-
-window.onload = function () {
-	MIDI.loadPlugin({
-		soundfontUrl: "/m21j/ext/midijs/soundfont/",
-		instrument: "acoustic_grand_piano",
-		callback: function() {
-			M21Theory.playMotto();
-		}
-	});
-	//M21Theory.randomGeneratorType = 'fixed';
-	//M21Theory.randomSeed = 1000;
-	//M21Theory.debug = true;
-	//Music21.debug = true;
-
-	var it1 = new M21Theory.IntervalTest();
+require(['m21theory'], function () { 
+	var it1 = m21theory.tests.get('interval');
 
 	it1.totalQs = 16;
 	it1.minInterval = -3;
@@ -69,23 +20,23 @@ window.onload = function () {
 	it1.assignmentId = 'multipartIntervals1';
 	it1.instructions = "<p>These small intervals will help you practice identifying chords below.  Remember a major chord has a Major 3rd below and a Minor 3rd above, while a minor chord has a Minord 3rd below and a Major 3rd above</p>";
 	
-	var ci = new M21Theory.ChordIdentificationTest();
+	var ci = m21theory.tests.get('chordIdentification');
 	ci.maxMistakes = 3;
 
 
-	var noteIdentify = new M21Theory.NoteIdentificationTest();
+	var noteIdentify = m21theory.tests.get('noteIdentification');
 	noteIdentify.assignmentId = 'noteIdentify';
 	
-	msct = new M21Theory.ScaleEarTest();
+	msct = m21theory.tests.get('scaleEar');
 	msct.assignmentId = 'scaleEar';
 	msct.totalQs = 14;
 	msct.maxMistakes = 3;
 	
 
-	var ks1 = new M21Theory.KeySignatureTest();
+	var ks1 = m21theory.tests.get('keySignature');
 	ks1.assignmentId = 'keySignature';
 
-	var it2 = new M21Theory.IntervalTest();
+	var it2 = m21theory.tests.get('interval');
 
 	it2.totalQs = 16;
 	it2.minInterval = 2;
@@ -96,12 +47,12 @@ window.onload = function () {
 	it2.instructions = "<p>These intervals now range up to an octave in either direction and unisons, fourths, fifths, and octaves can be augmented or diminished in additon to perfect.</p>";
 
 	
-	var cc = new M21Theory.ChordCreationTest();
+	var cc = m21theory.tests.get('chordCreation');
 	cc.assignmentId = 'chordCreation';
     cc.modeChoices = ['major'];
     cc.chordChoicesMode = {'major': ['I','IV','V']};
 	
-	var testBank = new M21Theory.TestBank();
+	var testBank = new m21theory.bank.TestBank();
 	testBank.testId = "ps09";
 	testBank.title = "Problem Set 9: Chord Types and Review";
 	testBank.instructions = "Answer the following questions; the first section is new. The intervals are also harder.";
@@ -115,7 +66,7 @@ window.onload = function () {
 	testBank.append(it2);
 	testBank.append(cc);
 	testBank.render();
-};
+});
 </script>
 <div class="related">
 	<ul><li><a href="#">21m.051 Cuthbert</a> &raquo; <a href="#">PS 9</a></li></ul>
