--- a/ps051/ps13.html
+++ b/ps051/ps13.html
@@ -3,69 +3,19 @@
 <head>
  <title>21M.051: Problem Set 13</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <script src='../ext/jquery/jquery-1.10.2.min.js'></script>
- <!-- midi.js package -->
- <script src="../ext/midijs/js/MIDI/AudioDetect.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Plugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Player.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.script.js" type="text/javascript"></script>
- <!-- extras -->
- <script src="../ext/midijs/inc/Base64.js" type="text/javascript"></script>
- <script src="../ext/midijs/inc/base64binary.js" type="text/javascript"></script>
- <!-- vexflow -->
- <script src="../ext/vexflow/vexflow-min.js"></script>
-
- <!-- jQuery UI for drag and drop... -->
- <script src="../ext/jqueryPlugins/jqueryUI/jquery-ui.min.js" type="text/javascript" ></script>
-
- <!-- music21j -->
- <script src="../music21j.js" type="text/javascript"></script>
- 
- <!-- music21theory -->
- <script src="../music21theory.js" type="text/javascript"></script>
- <link rel="stylesheet" href="../css/m21.css" type="text/css" />
-
-
-
-<style>
-.lightInput { border: 1px gray dotted;
-			  background-color: #ffffcc;
-			  opacity: .7;
-			   }
-.unanswered { background-color: #ffffbb; 
-			  opacity: .7;
-}
-.correct    { background-color: #bbffbb; }
-.incorrect  { background-color: #ffbbbb; }
-
-</style>
-
+ <script data-main="../src/m21theory" src="../ext/require/require.js"></script>
+  <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
 </head>
 <body>
 <script type="text/javascript">
-var m2;
-
-window.onload = function () {
-	MIDI.loadPlugin({
-		soundfontUrl: "../ext/midijs/soundfont/",
-		instrument: "acoustic_grand_piano",
-		callback: function() {
-			M21Theory.playMotto();
-		}
-	});
-	//M21Theory.randomGeneratorType = 'fixed';
-	//M21Theory.randomSeed = 1000;
-	//M21Theory.debug = true;
-	//Music21.debug = true;
-
-	var ks1 = new M21Theory.KeySignatureTest();
+require(['m21theory'], function () { 
+	var ks1 = m21theory.tests.get('keySignature');
 	ks1.allowEarlySubmit = true;
 	ks1.totalQs = 8;
 	ks1.instructions = "<p>First a review of major Key Signatures...</p>";
 	
-	var ks2 = new M21Theory.KeySignatureTest();
+	var ks2 = m21theory.tests.get('keySignature');
 	ks2.allowEarlySubmit = true;
 	ks2.mode = 'minor';
 	ks2.minSharps = -5;
@@ -75,15 +25,15 @@ window.onload = function () {
 	ks2.instructions = "<p>Now identify the minor key indicated by each of these key signatures.  Remember to write MINOR key names with lowercase letters... They're hard, so go slow</p>";
 	
 	
-	var scales = new M21Theory.ScaleMajorMinorWrittenTest();
+	var scales = m21theory.tests.get('scaleMajorMinorWritten');
 
-	var scales2 = new M21Theory.ScaleMajorMinorWrittenTest();
+	var scales2 = m21theory.tests.get('scaleMajorMinorWritten');
 	scales2.hide367 = true;
 	scales2.assignmentId = 'hiddenScales';
 	scales2.instructions = "<p>Same as above, but now scale degrees ^3, ^6, and ^7, are missing, so you'll need to do this by ear.</p>";
 	scales2.totalQs = 12;
 	
-	var testBank = new M21Theory.TestBank();
+	var testBank = new m21theory.bank.TestBank();
 	testBank.testId = "ps13";
 	testBank.title = "Minor scales and minor keys";
 	testBank.instructions = "When you get stuck, read Duckworth, <i>Music Fundamentals</i>, chp. 9 and 10; You may use a piano to do these.";
@@ -93,7 +43,7 @@ window.onload = function () {
 	testBank.append(scales);
 	testBank.append(scales2);
 	testBank.render();
-};
+});
 
 </script>
 <div class="related">
