--- a/ps051/ps14.html
+++ b/ps051/ps14.html
@@ -3,69 +3,19 @@
 <head>
  <title>21M.051: Problem Set 14</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <script src='../ext/jquery/jquery-1.10.2.min.js'></script>
- <!-- midi.js package -->
- <script src="../ext/midijs/js/MIDI/AudioDetect.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Plugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Player.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.script.js" type="text/javascript"></script>
- <!-- extras -->
- <script src="../ext/midijs/inc/Base64.js" type="text/javascript"></script>
- <script src="../ext/midijs/inc/base64binary.js" type="text/javascript"></script>
- <!-- vexflow -->
- <script src="../ext/vexflow/vexflow-min.js"></script>
-
- <!-- jQuery UI for drag and drop... -->
- <script src="../ext/jqueryPlugins/jqueryUI/jquery-ui.min.js" type="text/javascript" ></script>
-
- <!-- music21j -->
- <script src="../music21j.js" type="text/javascript"></script>
- 
- <!-- music21theory -->
- <script src="../music21theory.js" type="text/javascript"></script>
- <link rel="stylesheet" href="../css/m21.css" type="text/css" />
-
-
-
-<style>
-.lightInput { border: 1px gray dotted;
-			  background-color: #ffffcc;
-			  opacity: .7;
-			   }
-.unanswered { background-color: #ffffbb; 
-			  opacity: .7;
-}
-.correct    { background-color: #bbffbb; }
-.incorrect  { background-color: #ffbbbb; }
-
-</style>
-
+ <script data-main="../src/m21theory" src="../ext/require/require.js"></script>
+  <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
 </head>
 <body>
 <script type="text/javascript">
-var m2;
-
-window.onload = function () {
-	MIDI.loadPlugin({
-		soundfontUrl: "../ext/midijs/soundfont/",
-		instrument: "acoustic_grand_piano",
-		callback: function() {
-			M21Theory.playMotto();
-		}
-	});
-	//M21Theory.randomGeneratorType = 'fixed';
-	//M21Theory.randomSeed = 1000;
-	//M21Theory.debug = true;
-	//Music21.debug = true;
-
-	var ks1 = new M21Theory.KeySignatureTest();
+require(['m21theory'], function () { 
+	var ks1 = m21theory.tests.get('keySignature');
 	ks1.allowEarlySubmit = true;
 	ks1.totalQs = 8;
 	ks1.instructions = "<p>More review of major Key Signatures...</p>";
 	
-	var ks2 = new M21Theory.KeySignatureTest();
+	var ks2 = m21theory.tests.get('keySignature');
 	ks2.allowEarlySubmit = true;
 	ks2.mode = 'minor';
 	ks2.minSharps = -5;
@@ -75,16 +25,16 @@ window.onload = function () {
 	ks2.instructions = "<p>Now identify the minor key indicated by each of these key signatures.  Remember to write MINOR key names with lowercase letters... They're hard, so go slow. The minor key has three sharps less (or three flats more) than the major key of the same name.</p>";
 	
 	
-	var scales = new M21Theory.ScaleMajorMinorWrittenTest();
+	var scales = m21theory.tests.get('scaleMajorMinorWritten');
     scales.instructions = "<p>More work on identifying major and minor scales by sight OR by ear.</p>";
 	
-	var scales2 = new M21Theory.ScaleMajorMinorWrittenTest();
+	var scales2 = m21theory.tests.get('scaleMajorMinorWritten');
 	scales2.hide367 = true;
 	scales2.assignmentId = 'hiddenScales';
 	scales2.instructions = "<p>Same as above, but now scale degrees ^3, ^6, and ^7, are missing, so you'll need to do this by ear. Now descending scales are also tested</p>";
 	scales2.totalQs = 12;
 	
-    var cc = new M21Theory.ChordCreationTest();
+    var cc = m21theory.tests.get('chordCreation');
     cc.allowEarlySubmit = true;
     cc.modeChoices = ['minor'];
     cc.chordChoicesMode = {'minor': ['V']};
@@ -94,7 +44,7 @@ window.onload = function () {
     cc.title = 'Dominant Chord Review';
     cc.instructions = "<p>Create a major chord on the Dominant in each of the following keys.  Since the Dominant chord is the same in Major and Minor, this is a review of what you know from major.</p>"
 
-    var cc3 = new M21Theory.ChordCreationTest();
+    var cc3 =  m21theory.tests.get('chordCreation');
     cc3.allowEarlySubmit = true;
     cc3.modeChoices = ['minor'];
     cc3.chordChoicesMode = {'minor': ['viio']};
@@ -104,7 +54,7 @@ window.onload = function () {
     cc3.title = 'Diminished chords on the leading tone';
     cc3.instructions = "<p>Create a diminished chord on the leading tone in each of the following minor keys.  The diminished chord has two minor thirds in a row, creating a diminished fifth.  The diminished chord on the leading tone is the same in Major and Minor, so you will be learning skills for both modes. Make sure first that you find the leading tone properly!</p>"
 
-    var cc2 = new M21Theory.ChordCreationTest();
+    var cc2 =  m21theory.tests.get('chordCreation');
     cc2.allowEarlySubmit = true;
     cc2.modeChoices = ['minor'];
     cc2.chordChoicesMode = {'minor': ['V7']};
@@ -114,7 +64,7 @@ window.onload = function () {
     cc2.title = 'Dominant Seventh Chords';
     cc2.instructions = "<p>Create a dominant-seventh chord in each of the following minor keys.  The dominant seventh is like a dominant triad in the lowest 3 notes and a diminished triad in the highest three notes.  The Dominant Seventh chord is the same in Major and Minor, so you will be learning skills for both modes.</p>"
     
-    var cc4 = new M21Theory.ChordCreationTest();
+    var cc4 =  m21theory.tests.get('chordCreation');
     cc4.allowEarlySubmit = true;
     cc4.modeChoices = ['minor'];
     cc4.chordChoicesMode = {'minor': ['viio7']};
@@ -124,12 +74,12 @@ window.onload = function () {
     cc4.title = 'Diminished seventh chords on the leading tone';
     cc4.instructions = "<p>Create a diminished-seventh chord on the leading tone in each of the following minor keys.  The diminished seventh chord is a diminished seventh with another minor third added on top of it. It is generally used only in minor keys.</p>";
 
-    var ctp = new M21Theory.FirstSpecies();
+    var ctp =  m21theory.tests.get('firstSpecies');
     ctp.totalQs = 1;
     ctp.title = 'First Species Counterpoint Review';
     ctp.instructions = '<p>Like before, but you only need to do one.</p>';
 
-	var testBank = new M21Theory.TestBank();
+	var testBank =  new m21theory.bank.TestBank();
 	testBank.testId = "ps14";
 	testBank.title = "Seventh chords, Keys in the minor mode, etc.";
 	//testBank.instructions = "When you get stuck, read Duckworth, <i>Music Fundamentals</i>, chp. 9 and 10; You may use a piano to do these.";
@@ -145,7 +95,7 @@ window.onload = function () {
     testBank.append(cc4);
     testBank.append(ctp);
 	testBank.render();
-};
+});
 
 </script>
 <div class="related">
