--- a/ps051/ps16.html
+++ b/ps051/ps16.html
@@ -3,64 +3,14 @@
 <head>
  <title>21M.051: Problem Set 16</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <script src='../ext/jquery/jquery-1.10.2.min.js'></script>
- <!-- midi.js package -->
- <script src="../ext/midijs/js/MIDI/AudioDetect.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Plugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Player.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.script.js" type="text/javascript"></script>
- <!-- extras -->
- <script src="../ext/midijs/inc/Base64.js" type="text/javascript"></script>
- <script src="../ext/midijs/inc/base64binary.js" type="text/javascript"></script>
- <!-- vexflow -->
- <script src="../ext/vexflow/vexflow-min.js"></script>
-
- <!-- jQuery UI for drag and drop... -->
- <script src="../ext/jqueryPlugins/jqueryUI/jquery-ui.min.js" type="text/javascript" ></script>
-
- <!-- music21j -->
- <script src="../music21j.js" type="text/javascript"></script>
- 
- <!-- music21theory -->
- <script src="../music21theory.js" type="text/javascript"></script>
- <link rel="stylesheet" href="../css/m21.css" type="text/css" />
-
-
-
-<style>
-.lightInput { border: 1px gray dotted;
-			  background-color: #ffffcc;
-			  opacity: .7;
-			   }
-.unanswered { background-color: #ffffbb; 
-			  opacity: .7;
-}
-.correct    { background-color: #bbffbb; }
-.incorrect  { background-color: #ffbbbb; }
-
-</style>
-
+ <script data-main="../src/m21theory" src="../ext/require/require.js"></script>
+  <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
 </head>
 <body>
 <script type="text/javascript">
-var m2;
-
-window.onload = function () {
-	MIDI.loadPlugin({
-		soundfontUrl: "../ext/midijs/soundfont/",
-		instrument: "acoustic_grand_piano",
-		callback: function() {
-			M21Theory.playMotto();
-		}
-	});
-	//M21Theory.randomGeneratorType = 'fixed';
-	//M21Theory.randomSeed = 1000;
-	//M21Theory.debug = true;
-	//Music21.debug = true;
-
-	var ks2 = new M21Theory.KeySignatureTest();
+require(['m21theory'], function () { 
+	var ks2 = m21theory.tests.get('keySignature');
 	ks2.allowEarlySubmit = true;
 	ks2.mode = 'minor';
 	ks2.minSharps = -5;
@@ -69,7 +19,7 @@ window.onload = function () {
 	ks2.assignmentId = 'minorKeySignatures';
 	ks2.instructions = "<p>Now identify the minor key indicated by each of these key signatures.  Remember to write MINOR key names with lowercase letters... They're hard, so go slow. The minor key has three sharps less (or three flats more) than the major key of the same name.</p>";
 	
-    var cc4 = new M21Theory.ChordCreationTest();
+    var cc4 = m21theory.tests.get('chordCreation');
     cc4.totalQs = 22;
     cc4.studentFeedback = false;
     cc4.allowEarlySubmit = true;
@@ -81,19 +31,14 @@ window.onload = function () {
     cc4.title = 'Minor chords';
     cc4.instructions = "<p>Create the appropriate chord in each of the following minor keys.  When 'subdominant' is requested, give the minor subdominant; Major 'V' and 'V7' are included. No feedback will be given -- use the play button to check your work.</p>";
 
-    var ctp = new M21Theory.FirstSpecies();
-    ctp.totalQs = 1;
-    ctp.title = 'First Species Counterpoint Review';
-    ctp.instructions = '<p>Like before, but you only need to do one.</p>';
-
-	var testBank = new M21Theory.TestBank();
+	var testBank = new m21theory.bank.TestBank();
 	testBank.testId = "ps16";
 	testBank.title = "More harmony in minor";
 	
 	testBank.append(ks2);
     testBank.append(cc4);
 	testBank.render();
-};
+});
 
 </script>
 <div class="related">
