--- a/ps051/ps17.html
+++ b/ps051/ps17.html
@@ -3,64 +3,14 @@
 <head>
  <title>21M.051: Problem Set 17</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <script src='../ext/jquery/jquery-1.10.2.min.js'></script>
- <!-- midi.js package -->
- <script src="../ext/midijs/js/MIDI/AudioDetect.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Plugin.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/MIDI/Player.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
- <script src="../ext/midijs/js/Window/DOMLoader.script.js" type="text/javascript"></script>
- <!-- extras -->
- <script src="../ext/midijs/inc/Base64.js" type="text/javascript"></script>
- <script src="../ext/midijs/inc/base64binary.js" type="text/javascript"></script>
- <!-- vexflow -->
- <script src="../ext/vexflow/vexflow-min.js"></script>
-
- <!-- jQuery UI for drag and drop... -->
- <script src="../ext/jqueryPlugins/jqueryUI/jquery-ui.min.js" type="text/javascript" ></script>
-
- <!-- music21j -->
- <script src="../music21j.js" type="text/javascript"></script>
- 
- <!-- music21theory -->
- <script src="../music21theory.js" type="text/javascript"></script>
- <link rel="stylesheet" href="../css/m21.css" type="text/css" />
-
-
-
-<style>
-.lightInput { border: 1px gray dotted;
-			  background-color: #ffffcc;
-			  opacity: .7;
-			   }
-.unanswered { background-color: #ffffbb; 
-			  opacity: .7;
-}
-.correct    { background-color: #bbffbb; }
-.incorrect  { background-color: #ffbbbb; }
-
-</style>
-
+ <script data-main="../src/m21theory" src="../ext/require/require.js"></script>
+  <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
 </head>
 <body>
 <script type="text/javascript">
-var m2;
-
-window.onload = function () {
-	MIDI.loadPlugin({
-		soundfontUrl: "../ext/midijs/soundfont/",
-		instrument: "acoustic_grand_piano",
-		callback: function() {
-			M21Theory.playMotto();
-		}
-	});
-	//M21Theory.randomGeneratorType = 'fixed';
-	//M21Theory.randomSeed = 1000;
-	//M21Theory.debug = true;
-	//Music21.debug = true;
-
-    var cc4 = new M21Theory.ChordCreationTest();
+require(['m21theory'], function () { 
+    var cc4 = m21theory.tests.get('chordCreation');
     cc4.totalQs = 22;
     cc4.allowEarlySubmit = true;
     cc4.modeChoices = ['major','minor'];
@@ -74,9 +24,9 @@ window.onload = function () {
             'major': ['I','IV','V','vi','viio'],
             'minor': ['i','iv','V','viio']
     };
-    var ci = new M21Theory.ChordIdentificationTest();
+    var ci = m21theory.tests.get('chordIdentification');
     ci.maxMistakes = 3;
-    ci.chords = M21Theory.randomShuffle(["C3 E3 G3", "E-3 G3 C4", "G3 E3 C4",
+    ci.chords = m21theory.random.shuffle(["C3 E3 G3", "E-3 G3 C4", "G3 E3 C4",
                                            "F#2 C#3 A3", "C#2 A3 F#3", "A2 C#3 F#3", 
                                            "G2 D3 B-3","D3 G3 B-3", "B-2 D3 G3",
                                            "A-2 C3 E-3", "C3 E-3 A-3", "E-2 A-2 C3",
@@ -84,14 +34,14 @@ window.onload = function () {
     ci.subtype = 'inversions';
     ci.instructions = "<p>Identify the following chords as Root Position, First Inversion, or Second Inversion. Double click on the chord to listen to it, then drag it to the appropriate space.</p>";
        
-	var testBank = new M21Theory.TestBank();
+	var testBank = new m21theory.bank.TestBank();
 	testBank.testId = "ps17";
 	testBank.title = "Chords in Inversion";
 	
     testBank.append(cc4);
     testBank.append(ci);
 	testBank.render();
-};
+});
 
 </script>
 <div class="related">
