.flat now returns a Stream; bestClef in Clef.js

--- a/testHTML/renderTinyNotationDivs.html
+++ b/testHTML/renderTinyNotationDivs.html
@@ -61,7 +61,7 @@ set <code>class=""music21 tinyNotation"</code> or
 <div>
 &lt;div class="music21 tinyNotation noPlayback"&gt;3/4 d8. f#16 e8 f g a c'#2. d'2.&lt;/div&gt; (clicking does nothing)
 </div> 
-<div class="music21 tinyNotation noPlayback">3/4 d8. f#16 e8 f g a c'#2. d'2.</div>
+<div class="music21 tinyNotation noPlayback">3/4 D8. F#16 E8 F G A c#2. d2.</div>
 
 </body>
 </html>
