firefox support: no innerText; textContent
Former-commit-id: 3f1cfe9bf6332afd7158a0ebf51511a67103d8d5 [formerly 91c90a3854c2af6c2d65ea83b7422d50c9202f4e [formerly 637c2f5840964b9432dbc96b97aeb7f493311dcb]]
Former-commit-id: 95ddf87b7eff2d8117df0a9553cd5ffcdbfa8101
Former-commit-id: 03791a64f3fad1e87e3b643c93c1f018fc901bd3

--- a/testHTML/renderTinyNotationDivs.html
+++ b/testHTML/renderTinyNotationDivs.html
@@ -61,7 +61,9 @@ set <code>class=""music21 tinyNotation"</code> or
 <div>
 &lt;div class="music21 tinyNotation noPlayback"&gt;3/4 D8. F#16 E8 F Gn A C#2. D2.&lt;/div&gt; (clicking does nothing)
 </div> 
-<div class="music21 tinyNotation noPlayback">3/4 D8. F#16 E8 F Gn A c#2. d2.</div>
+<div class="music21 tinyNotation noPlayback">3/4 D8. F#16 
+
+    E8 F Gn A c#2. d2.</div>
 
 </body>
 </html>
