staffLine support in renderOptions
Former-commit-id: 51a7494c2c497f4e04ad25f88371cdb73179e5a3

--- a/testHTML/midiInChords.html
+++ b/testHTML/midiInChords.html
@@ -24,7 +24,7 @@
 		
 		require(['music21'], function () { 
 		    s = new music21.stream.Stream();
-		    
+		    //s.renderOptions.staffLines = 1;
 		    metro = new music21.tempo.Metronome();
 		    metro.addDiv($("#metronomeDiv"));
             
