estimateStaffLength better organization
Former-commit-id: b8bf7cba5714995d0b52ee77dc74efe13d89776d

--- a/testHTML/midiInChords.html
+++ b/testHTML/midiInChords.html
@@ -23,7 +23,7 @@
 		
 		
 		require(['music21'], function () { 
-		    s = new music21.stream.Stream();
+		    s = new music21.stream.Measure();
 		    s.clef = new music21.clef.TrebleClef();
 		    s.renderOptions.staffLines = 5;
 		    metro = new music21.tempo.Metronome();
