errors in scroll; supports Chords
Former-commit-id: 599b12a5993854912f3a4d81f5ff468c3efd0f7f [formerly 343dc4b193b4102d2aca73f5ad4e16dbb872d5f0 [formerly 9f9bd77d5d6e430fcc6dc95e5661506aeea1d0d7]]
Former-commit-id: 7251a4fc3c964a3b9ebc9449b47c22c0a7698f1c
Former-commit-id: 6dbb250524c4cbf7c9d31c5d03a364bcbff0818c

--- a/testHTML/demo-Cuthbert.html
+++ b/testHTML/demo-Cuthbert.html
@@ -58,7 +58,8 @@ require(['music21'], drawMe);
 
 </script>
 </body>
-This was the oldest/first experiment with music21j, from summer 2013.  Updated so it still works.
+This was the oldest/first experiment with music21j, from summer 2013.  Updated so it still works.<br/>
+Only for historical nostalgia...
 <input type="button" onClick="playNote(60)" value="clickMe" />
 <input type="button" onClick="refreshMe()" value="playSeventy" /><br />
 <input type="text" value="E_2 F_1.5 G_.5 E_2" id="textId" onchange="renderIt()"/>
