--- a/testHTML/midiInRequire.html
+++ b/testHTML/midiInRequire.html
@@ -12,7 +12,7 @@
 		    me.sendToMIDIjs();
 		    if (me.noteOn) {
 		        var m21n = me.music21Note();
-		        if (s.elements.length > 7) {
+		        if (s.length > 7) {
 		            s.elements = s.elements.slice(1)
 		        }
 		        s.append(m21n);
