--- a/testHTML/followScore.html
+++ b/testHTML/followScore.html
@@ -17,7 +17,7 @@
             c.duration.type = 'eighth';
             m.append(c);
             
-            var s2 = music21.tinyNotation.TinyNotation("4/4 E2 F#4 G8 A G2 E E1");// B4 c B A G8 A G F E4 D C1");
+            var s2 = music21.tinyNotation.TinyNotation("4/4 E2 F#4 G8 r G2 E E1");// B4 c B A G8 A G F E4 D C1");
             s = new music21.stream.Score();
             s.insert(0, s1);
             s.insert(0, s2);
