replaceCanvas instead of replaceLastCanvas
drawCanvas is gone. use renderVexflowOnCanvas instead.
DragScore.html does not work with the new information stored on notes…

--- a/testHTML/demo-Cuthbert.html
+++ b/testHTML/demo-Cuthbert.html
@@ -51,7 +51,7 @@ function renderIt() {
        var newNote = new music21.note.Note(noteName, noteValue);
        newStream.append(newNote);
     }
-    newStream.replaceLastCanvas();
+    newStream.replaceCanvas();
 }
 
 require(['music21'], drawMe);
