--- a/testHTML/demo-DragScore.html
+++ b/testHTML/demo-DragScore.html
@@ -63,8 +63,7 @@ function renderThemes ()  {
 
 function handleThemeDrop(event, ui) {
     var containedStream = ui.draggable.data('stream');
-    var containedStreamCopy = new music21.stream.Measure();
-    containedStreamCopy.elements = containedStream.elements;
+    var containedStreamCopy = music21.common.copyStream(containedStream, true); // deep copy
     allStream.append(containedStreamCopy);
     allStreamScore.resetRenderOptionsRecursive();
     var newCanvas = allStreamScore.createPlayableCanvas();
