--- a/testHTML/m21jSandbox.html
+++ b/testHTML/m21jSandbox.html
@@ -123,7 +123,7 @@ var n = new music21.note.Note("C#");
 n.duration.type="whole";
 var s = new music21.stream.Stream();
 s.append(n);
-s.replaceLastCanvas();
+s.replaceCanvas();
 </textarea>
         <p/>
         <canvas width=625 height=460></canvas>
