--- a/testHTML/midiInChords.html
+++ b/testHTML/midiInChords.html
@@ -18,7 +18,9 @@
                 var lastNote = s.elements[s.length - 1];
             }
             s.append(appendObject);
-            var canv = s.replaceLastCanvas();
+            var $canvasDiv = $("#canvasDiv");
+            $canvasDiv.empty();
+            var canv = s.appendNewCanvas($canvasDiv);
         }
 		
 		
@@ -47,7 +49,7 @@
 	</div>
 	<h2>Chord and Duration rendering and Metronome Demo.</h2>
     <div><i>Requires MIDI keyboard and Jazz Plugin to work.</i></div>
-	<div>
+	<div id="canvasDiv">
         <canvas />
     </div>
     <div id="metronomeDiv"></div>
