allow chained calls to append, etc.
delete testHTML/testRenderJSON.html — irrelevant to the current work.


Former-commit-id: 652e0cb3ef96bf6e07cd5028a83b96606b2c6fbf [formerly e6a31d44aa35f7006eb02a8d47a6c21205043142 [formerly 8f012eb3373699877dadf47de9bb5ac7e9632249]]
Former-commit-id: 5e555134dc206c78a31367e638c3df2160e6afad
Former-commit-id: b6523ec4bf5d79e1106947fe2ea5dcf9e40701ac

--- a/testHTML/demo-DragScore.html
+++ b/testHTML/demo-DragScore.html
@@ -71,7 +71,7 @@ function handleThemeDrop(event, ui) {
     var containedStreamCopy = containedStream.clone(true);
     
     allStream.append(containedStreamCopy);
-    allStreamScore.resetRenderOptionsRecursive();
+    allStreamScore.resetRenderOptions(true); // recursive
     var newCanvas = allStreamScore.createPlayableCanvas();
 	$('#dropDiv canvas').replaceWith(newCanvas[0]);
 	// alert(allStream.hi);
