no more loadMIDI -- in miditools
Former-commit-id: bfc479d95efe8500eb04c9fa6cb3e88a24e617dd

--- a/testHTML/followScore.html
+++ b/testHTML/followScore.html
@@ -52,7 +52,7 @@
             s.insert(0, s2);
             s.tempo = 90;
             
-            lsf = music21.MIDI.loadSoundfont;
+            lsf = music21.miditools.loadSoundfont;
             
             lsf('clarinet', function(i) { 
                 s1.instrument = i;
