fix so is crossSite
Former-commit-id: 988ea5bd4878c1f782eb7c2fc3f87a6837c59717

--- a/testHTML/crossSiteTest.html
+++ b/testHTML/crossSiteTest.html
@@ -1,5 +1,5 @@
 <html><head>
-   <script data-main="../src/music21" src="../ext/require/require.js"></script>
+   <script data-main="//localhost:8000/src/music21" src="//localhost:8000/ext/require/require.js"></script>
    <script>
    require(['music21'], function () {
        var n = new music21.note.Note("F#");
