getOffsetBySite, offsetMap, makeMeasures
Former-commit-id: ee223d23d2b84f947f944ee234c319427e121bb9 [formerly b70242f8e2005de90c268f7ad25b303ea0b7ea69 [formerly d0f3e25a53a50d045b7985c57524a82473264a6d]]
Former-commit-id: f027d0f12a1996248560f765eeedef981ada35d7
Former-commit-id: 8a66d4e4e5e70c3eb23b4b1eedd6b2da04923b61

--- a/testHTML/followScore.html
+++ b/testHTML/followScore.html
@@ -12,6 +12,7 @@
             
             var s1 = music21.tinyNotation.TinyNotation("4/4 c2 d#4 e8 f g4 r8 B c4~ c16 d32 e f g a b c'1 b4 a g f e8 f e d c4 B c1 d2 c2 B2 c2 d1 c1");
             var m = s1.get(0);
+            m.get(0).stemDirection = 'down';
             m.elements.pop();
             var c = new music21.chord.Chord(["F4", "A-4", "C5"]);
             c.duration.type = 'eighth';
@@ -19,6 +20,7 @@
             m.append(c);
             var mQuarters = s1.get(3);
             var voice1 = new music21.stream.Voice();
+            voice1.autoBeam = false; // needed to not lose stemDirection
             voice1.renderOptions.stemDirection = 'up';
             for (var i = 0; i < 4; i++) {
                 voice1.append( mQuarters.get(i) );
