--- a/testHTML/audioSearchGame.html
+++ b/testHTML/audioSearchGame.html
@@ -177,7 +177,7 @@
 <button id='stopListening'>Stop Listening</button>
 <button id='bassClef'>Bass</button>
 <button id='trebleClef'>Treble</button>
-<button id='natural'>Key of C</button>
+<button id='naturals'>Key of C</button>
 <button id='accidentals'>Use Accidentals (Harder)</button>
 <button id='playNotes'>Play Notes</button>
 <button id='muteNotes'>Don't Play Notes (Harder)</button><br/>
