orchestral score updates
Former-commit-id: edc1a9c0e45ed99341f00ba268b59410a24430f8

--- a/testHTML/orchestralScoreDemo.html
+++ b/testHTML/orchestralScoreDemo.html
@@ -42,9 +42,11 @@
 		<div id='canvases' align='center'>
 		</div>
 		<div id='instrumentSelect'>
-		<input type="checkbox" name="instrument" value="floonorp">Floonorp<br>
-		<input type="checkbox" name="instrument"  value="slitherhorn">Slitherhorn<br>
-		<input type="checkbox" checked name="instrument"  value="bawoonka">Bawoonka
+		<input type="checkbox" name="instrument" value="flute">Flute<br>
+		<input type="checkbox" name="instrument"  value="oboe">Oboe<br>
+
+		<input type="checkbox" checked name="instrument"  value="Bassoon">Bassoon<br>
+		<input type="checkbox" checked name="instrument"  value="clarinet">Clarinet
 		</div>
 		<button type='button' id='createCanvases'> Create Staves </button>
 		<div id='canvases' class = 'canvas'></div>
@@ -52,3 +54,4 @@
 	</body>  
 </html>
 	
+
