remove remnants of JazzMidi
Former-commit-id: f8cbebcefb289ffd280ce3ec6befb0727a3d0118

--- a/testHTML/midiInKeyChords.html
+++ b/testHTML/midiInKeyChords.html
@@ -71,18 +71,11 @@
             
             k.appendKeyboard(kd); // 37key keyboard
 
-            
-            var Jazz = music21.jazzMidi.createPlugin();
-		    music21.jazzMidi.createSelector($("#putMidiSelectHere"), Jazz);
-		    music21.jazzMidi.callBacks.general = [
-		                                          music21.miditools.sendToMIDIjs,
-		                                          music21.miditools.makeChords, 
-		                                          music21.keyboard.jazzHighlight.bind(k),
-		                                          ];
-//		                                          
-		                                          //];
-		    music21.jazzMidi.callBacks.sendOutChord = appendElement;
-
+            music21.webmidi.createSelector($("#putMidiSelectHere"));
+            music21.webmidi.callBacks.general = [music21.miditools.makeChords, 
+                                                 music21.keyboard.jazzHighlight.bind(k),
+                                                  music21.miditools.sendToMIDIjs];
+            music21.webmidi.callBacks.sendOutChord = appendElement;
 		});
 		
 		</script>
