--- a/testHTML/midiInChords.html
+++ b/testHTML/midiInChords.html
@@ -33,11 +33,10 @@
             
 		    music21.miditools.metronome = metro;
 
-            var Jazz = music21.jazzMidi.createPlugin();
-		    music21.jazzMidi.createSelector($("#putMidiSelectHere"), Jazz);
-		    music21.jazzMidi.callBacks.general = [music21.miditools.makeChords, 
+		    music21.webmidi.createSelector($("#putMidiSelectHere"));
+		    music21.webmidi.callBacks.general = [music21.miditools.makeChords, 
 		                                          music21.miditools.sendToMIDIjs];
-		    music21.jazzMidi.callBacks.sendOutChord = appendElement;
+		    music21.webmidi.callBacks.sendOutChord = appendElement;
 		});
 		
 		
