--- a/testHTML/showKeyboard.html
+++ b/testHTML/showKeyboard.html
@@ -63,19 +63,18 @@
             var midiCallbacksNoPlay = [music21.miditools.makeChords, 
                                        music21.keyboard.jazzHighlight.bind(k)];
 
-            var Jazz = music21.jazzMidi.createPlugin();
-		    music21.jazzMidi.createSelector($("#putMidiSelectHere"), Jazz);
-		    music21.jazzMidi.callBacks.general = midiCallbacksPlay;
-		    music21.jazzMidi.callBacks.sendOutChord = appendElement;
+            music21.webmidi.createSelector($("#putMidiSelectHere"));
+            music21.webmidi.callBacks.general = [midiCallbacksPlay];
+            music21.webmidi.callBacks.sendOutChord = appendElement;
 		    
             $('#markC').bind('click', function () { k.markC = this.checked; k.redrawSVG() })
             $('#showNames').bind('click', function () { k.showNames = this.checked; k.redrawSVG() })
             $('#showOctaves').bind('click', function () { k.showOctaves = this.checked; k.redrawSVG() })
             $('#playSound').bind('click', function() {
                 if (this.checked) {
-                    music21.jazzMidi.callBacks.general = midiCallbacksPlay;
+                    music21.webmidi.callBacks.general = midiCallbacksPlay;
                 } else {
-                    music21.jazzMidi.callBacks.general = midiCallbacksNoPlay;
+                    music21.webmidi.callBacks.general = midiCallbacksNoPlay;
                 }
             });
 
