fix all but player button.

--- a/testHTML/hiChanger.html
+++ b/testHTML/hiChanger.html
@@ -1,6 +1,8 @@
 <html>
 <head>
  <title>Hi</title>
+    <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+
  <script data-main="../src/music21" 
          src="../ext/require/require.js"></script>
 </head>
